fix the slider section. fix the gap between slider and other sections.

--- a/css/main.css
+++ b/css/main.css
@@ -243,30 +243,45 @@ ul {
 
 .hero-partners {
   background: url(../img/bg-partners.png) no-repeat center center;
-  padding-top: 56px;
+  background-size: cover;
+  padding: 100px 0;
 }
 
+/* wrap only parent for all nested element fixed height** */
 .slider-wrap {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
-    position: relative;
+  position: relative;
+  width: 100%;
+  height: 280px;
+}
+.slider-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 .slider-item {
-  padding: 0 40px;
-  height: 320px;
+  height: 100%;
+  text-align: center;
   display: flex;
   align-items: center;
+  padding: 0 3%;
 }
 .slider-item > img {
   max-height: 50px;
 }
 .slider-controls {
   position: absolute;
-  top: 0;
+  top: 3px;
   left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1;
 }
 
 /* content section "Contact" */
